objects/CS_CaseSymptomMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>NewCaseSubSymptom__c</fullName>
        <label>NewCaseSubSymptom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewCaseSymptom__c</fullName>
        <label>NewCaseSymptom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <label>UniqueId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CS_CaseSymptomMapping</label>
</CustomObject>